force-app/main/default/objects/cicloLectivo__c/cicloLectivo__c.object-meta.xml
<CustomObject>
    <label>Ciclo Lectivo</label>
    <nameField>
        <label>Nombre de Ciclo Lectivo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ciclos Lectivos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>