force-app/main/default/objects/cicloLectivo__c/fields/cicloAnterior__c.field-meta.xml
<CustomField>
    <fullName>cicloAnterior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciclo Anterior</label>
    <referenceTo>cicloLectivo__c</referenceTo>
    <relationshipLabel>cicloLectivo</relationshipLabel>
    <relationshipName>cicloLectivo</relationshipName>
    <type>Lookup</type>
</CustomField>