force-app/main/default/objects/cicloLectivo__c/fields/diasRestantes__c.field-meta.xml
<CustomField>
    <fullName>diasRestantes__c</fullName>
    <formula>If( Estado__c = &quot;Vigente&quot;, fin__c - today() , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dias Restantes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>