force-app/main/default/objects/cicloLectivo__c/fields/diasTranscurridos__c.field-meta.xml
<CustomField>
    <fullName>diasTranscurridos__c</fullName>
    <formula>If(  Estado__c = &quot;Vigente&quot;, today()  - inicio__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dias transcurridos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>