force-app/main/default/objects/cicloLectivo__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <formula>IF( Today() &lt; inicio__c, &quot;Proximo&quot; , IF (Today() &gt; fin__c, &quot;Pasado&quot;, &quot;Vigente&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>