force-app/main/default/objects/cicloLectivo__c/fields/esVigente__c.field-meta.xml
<CustomField>
    <fullName>esVigente__c</fullName>
    <formula>AND( Today() &gt;=  inicio__c  , Today() &lt;= fin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>es vigente</label>
    <type>Checkbox</type>
</CustomField>