force-app/main/default/objects/cicloLectivo__c/fields/fin__c.field-meta.xml
<CustomField>
    <fullName>fin__c</fullName>
    <label>Fin</label>
    <type>Date</type>
</CustomField>