force-app/main/default/objects/cicloLectivo__c/fields/inicio__c.field-meta.xml
<CustomField>
    <fullName>inicio__c</fullName>
    <label>Inicio</label>
    <type>Date</type>
</CustomField>