force-app/main/default/objects/cicloLectivo__c/fields/Pasado__c.field-meta.xml
<CustomField>
    <fullName>Pasado__c</fullName>
    <formula>fin__c &lt; Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pasado</label>
    <type>Checkbox</type>
</CustomField>