force-app/main/default/objects/cicloLectivo__c/fields/Programa__c.field-meta.xml
<CustomField>
    <fullName>Programa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programa</label>
    <referenceTo>Programa__c</referenceTo>
    <relationshipLabel>Ciclo Lectivos</relationshipLabel>
    <relationshipName>cicloLectivo</relationshipName>
    <type>Lookup</type>
</CustomField>