force-app/main/default/objects/cicloLectivo__c/fields/Proximos__c.field-meta.xml
<CustomField>
    <fullName>Proximos__c</fullName>
    <formula>inicio__c &gt; Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proximos</label>
    <type>Checkbox</type>
</CustomField>