force-app/main/default/objects/cicloLectivo__c/validationRules/Rangos_de_Fechas.validationRule-meta.xml
<ValidationRule>
    <fullName>Rangos_de_Fechas</fullName>
    <active>true</active>
    <errorConditionFormula>fin__c &lt; inicio__c</errorConditionFormula>
    <errorDisplayField>fin__c</errorDisplayField>
    <errorMessage>La fecha fin debe ser mayor a la fecha de inicio</errorMessage>
</ValidationRule>