force-app/main/default/objects/cicloLectivo__c/listViews/Proximos.listView-meta.xml
<ListView>
    <fullName>Proximos</fullName>
    <columns>NAME</columns>
    <columns>inicio__c</columns>
    <columns>fin__c</columns>
    <columns>diasRestantes__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>esVigente__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Proximos</label>
</ListView>